Added paragraph and list elements

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>My first Webpage</h1>
+        <p>we are talking about the staging environment.</p>
+
+        <li>New element</li>
         <script src="" async defer></script>
         <script></script>
         <script></script>
