Add another empty script tag

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <li>New element</li>
         <script src="" async defer></script>
         <script></script>
+        <script></script>
     </body>
 </html>
