--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <![endif]-->
         <h1>My first Webpage</h1>
         <script src="" async defer></script>
+        <script></script>
+        <script></script>
     </body>
 </html>
